[project]
name = "course-schedule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "icalendar>=7.1.0",
    "lxml>=6.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.18",
    "questionary>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]
